--- a/doc/notes.tex
+++ b/doc/notes.tex
@@ -117,15 +117,89 @@ Jorrit Wronski\\
 \subsection{Assumptions}
 \begin{enumerate}
 \renewcommand{\theenumi}{\roman{enumi}}
-\item The tube is cylindrical
+\item The tube is cylindrical with a constant cross sectional area
 \item The velocity of the fluid is uniform on the cross sectional area
 \item The enthalpy of the fluid is linear in each region of the tube (sub-cooled, two-phase, super-heated)
 \item Pressure is considered constant (at least for now)
-\item The secondary fluid is treated as an constant heat capacity fluid
+\item The secondary fluid is treated as a constant heat capacity fluid
 \end{enumerate}
 \subsection{Equations}
 Thermodynamic properties are calculated using Coolprop \cite{Bell2013}. The state variable selected are \gls{p} and \gls{hbar}. The heat transfer coefficients on primary side ($\gls{U}_{\gls{sub:pf},\gls{sub:1}}$,$\gls{U}_{\gls{sub:pf},\gls{sub:2}}$,$\gls{U}_{\gls{sub:pf},\gls{sub:3}}$) and secondary side ($\gls{U}_{\gls{sub:sf},\gls{sub:1}}$,$\gls{U}_{\gls{sub:sf},\gls{sub:2}}$,$\gls{U}_{\gls{sub:sf},\gls{sub:3}}$) are calculated using appropriate heat transfer models. Different model of void fraction \gls{alphabar} have been also implemented.\\
 \\
+
+ %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%  MASS BALANCE DERIVATION PROCESS %%%%%%%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{Mass Balance: derivation process}
+The mass balance in the differential form can be written as:
+\begin{equation}
+\frac{\partial A \cdot \rho}{\partial t} + \frac{\partial \gls{mdot}}{\partial z}= 0
+\label{eq: MassBalance}
+\end{equation}
+To get the mass balance over a certain region (e.g. the sub-cooled region from 0 to $\gls{L}_{\gls{sub:1}}$ ), we need to integrate over z equation \ref{eq: MassBalance}:
+
+\begin{equation}
+\int_{0}^{\gls{L}_{\gls{sub:1}}}  \frac{\partial A \cdot \rho_{\gls{sub:1}} }{\partial t} dz + \int_{0}^{\gls{L}_{\gls{sub:1}}} \frac{\partial \gls{mdot}}{\partial z} dz= 0
+\label{eq: MassBalInt}
+\end{equation}
+
+Applying Leibniz rule for the first term and solving the integral for the second term of equation \ref{eq: MassBalInt}, results:
+
+\begin{equation}
+A \cdot \left[  \frac{d}{dt} \cdot \int_{0}^{\gls{L}_{\gls{sub:1}}} \rho_{\gls{sub:1}} dz - \rho_{\gls{sub:1}}(\gls{L}_{\gls{sub:1}}) \cdot \frac{d\gls{L}_{\gls{sub:1}}}{dt} \right] = \gls{mdot}_{\gls{sub:in}} - \gls{mdot}_{\gls{sub:12}}
+\label{eq: MassAfterLeibniz}
+\end{equation}
+
+Solving the  first term of equation \ref{eq: MassAfterLeibniz} results in:
+\begin{equation}
+ \frac{d}{dt} \cdot \int_{0}^{\gls{L}_{\gls{sub:1}}} \rho_{\gls{sub:1}} dz =  \frac{d}{dt} \cdot (\overline{\rho}_{\gls{sub:1}} \cdot L_{\gls{sub:1}}) = \overline{\rho}_{\gls{sub:1}} \cdot \frac{dL_{\gls{sub:1}}}{dt} + L_{\gls{sub:1}} \cdot \frac{d\overline{\rho}_{\gls{sub:1}}}{dt}
+\label{eq: MassDerDens}
+\end{equation}
+The bar over the density indicates that a mean value of the zone is considered. Substituting equation \ref{eq: MassDerDens} in equation \ref{eq: MassAfterLeibniz} results in:
+\begin{equation}
+A \cdot \left[ L_{\gls{sub:1}} \cdot \frac{d\overline{\rho}_{\gls{sub:1}}}{dt}  + (\gls{rhobar}_{\gls{sub:1}} - \rho_{\gls{sub:l}}) \cdot \frac{d \gls{L}_{\gls{sub:1}}}{d \gls{t}}\right] = \gls{mdot}_{\gls{sub:in}} -  \gls{mdot}_{\gls{sub:12}}
+\end{equation}
+which represents the mass balance for the first zone of the heat exchanger. The same procedure can be applied to develop the mass balance for the second and the third zone of the heat exchanger.
+
+ %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%  ENERGY BALANCE DERIVATION PROCESS %%%%%%%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{Energy Balance: derivation process}
+The energy balance for a zone of the heat exchanger can be written as:
+\begin{equation}
+A \cdot \frac{\partial(\rho_{\gls{sub:1}} \cdot h_{\gls{sub:1}} - p)}{\partial t} + \frac{\partial ( h_{\gls{sub:1}} \cdot \gls{mdot})}{\partial z} = \gls{Qdot}
+\label{eq: EnergyBalance}
+\end{equation}
+
+Integrating over length results in:
+\begin{equation}
+A \cdot \int_{0}^{L_{\gls{sub:1}}} \frac{\partial(\rho_{\gls{sub:1}} \cdot h_{\gls{sub:1}})}{\partial t} dz - A \cdot L_{\gls{sub:1}} \cdot \frac{dp}{dt} + \int_{0}^{L_{\gls{sub:1}}} \frac{\partial (h_{\gls{sub:1}} \cdot \gls{mdot})}{\partial z} dz =  \gls{Qdot}
+\label{eq: EnerBalInt}
+\end{equation}
+where the pressure term is not integrated because is considered constant all over the length. Applying Leibniz rule for the first term of equation \ref{eq: EnerBalInt} results in:
+
+\begin{equation}
+A \cdot \left[ \frac{d}{dt} \int_{0}^{L_{\gls{sub:1}}} (\rho_{\gls{sub:1}} \cdot h_{\gls{sub:1}}) dz   -  (\rho \cdot h)_{L_{\gls{sub:1}}} \cdot \frac{dL_{\gls{sub:1}} }{dt}  \right] - A \cdot L_{\gls{sub:1}} \cdot \frac{dp}{dt}= \gls{mdot}_{\gls{sub:in}} \cdot \gls{h}_{\gls{sub:in}} -  \gls{mdot}_{\gls{sub:12}} \cdot \gls{h}_{\gls{sub:12}} + \gls{Qdot}
+\label{eq: EnerBqlLeibniz}
+\end{equation}
+
+Solving the integral for the first term of equation results in
+
+\begin{equation}
+ \frac{d}{dt} \int_{0}^{L_{\gls{sub:1}}} (\rho_{\gls{sub:1}} \cdot h_{\gls{sub:1}}) dz = \frac{d}{dt} ( \overline{\rho}_{\gls{sub:1}} \cdot \overline{h}_{\gls{sub:1}} \cdot L_{\gls{sub:1}}) =\overline{\rho}_{\gls{sub:1}} \overline{h}_{\gls{sub:1}} \frac{d  L_{\gls{sub:1}}}{dt} + \overline{h}_{\gls{sub:1}} L_{\gls{sub:1}} \frac{d  \overline{\rho}_{\gls{sub:1}}}{dt} + \overline{\rho}_{\gls{sub:1}}L_{\gls{sub:1}} \frac{d  \overline{h}_{\gls{sub:1}}}{dt}
+\label{eq: EntDensDer}
+\end{equation}
+
+Substituting equation \ref{eq: EntDensDer} into equation \ref{eq: EnerBqlLeibniz} and arranging the terms results in:
+
+
+\begin{equation}
+AL_{\gls{sub:1}} \cdot \left[   \gls{rhobar}_{\gls{sub:1}} \cdot \frac{d \gls{hbar}_{  \gls{sub:1}}}{d \gls{t}} 
+  + \gls{hbar}_{\gls{sub:1}}   \cdot \frac{d \gls{rhobar}_{\gls{sub:1}}}{d \gls{t}}
+  -                                  \frac{d \gls{p}}{d \gls{t}} \right] + A( \overline{\rho}_{\gls{sub:1}} \overline{h}_{\gls{sub:1}} - \rho_{\gls{sub:l}} h_{\gls{sub:l}}   )  \frac{d  L_{\gls{sub:1}}}{dt} = \gls{mdot}_{\gls{sub:in}} \cdot \gls{h}_{\gls{sub:in}} -  \gls{mdot}_{\gls{sub:12}} \cdot \gls{h}_{\gls{sub:12}} + \gls{Qdot}
+\end{equation}
+
+which represents the energy balance for the first zone of the heat exchanger. The same procedure can be applied to develop the energy balance for the second and the third zone of the heat exchanger.
+
+
 \begin{center}
 {\bf SUB-COOLED ZONE}
 \end{center}
